syntax = "proto3";

package admin_v2;
option go_package = "github.com/pachyderm/pachyderm/v2/src/admin";

import "google/protobuf/empty.proto";
import "gogoproto/gogo.proto";

message ClusterInfo {
  string id = 1 [(gogoproto.customname) = "ID"];
  string deployment_id = 2 [(gogoproto.customname) = "DeploymentID"];
}

service API {
  rpc InspectCluster(google.protobuf.Empty) returns (ClusterInfo) {}
}
